# pi-oled

./: AGENTS.md  Cargo.toml  README.md  build.sh  setup.sh
.cargo/: config.toml
oled/: Cargo.toml
oled/src/: bluetooth.rs  buttons.rs  display.rs  joystick.rs  main.rs  mpv.rs
remote-dev/: Cargo.toml
remote-dev/src/: client.rs  main.rs  server.rs
