[package]
name = "oled"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
bitmap-font = "0.3.0"
dotenv = "0.15.0"
embedded-graphics = "0.8.1"
local-ip-address = "0.6.3"
macaddr = "1.0.1"
rppal = "0.22.1"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = "1.12.0"
