[package]
name = "remote-dev"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
clap = { version = "4.5.26", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
strum = { version = "0.26.3", features = ["derive"] }
